--- a/se.chalmers.turtlebotmission.parent/se.chalmers.turtlebotmission.web/build.gradle
+++ b/se.chalmers.turtlebotmission.parent/se.chalmers.turtlebotmission.web/build.gradle
@@ -7,16 +7,16 @@ dependencies {
 	compile "org.eclipse.xtext:org.eclipse.xtext.xbase.web:${xtextVersion}"
 	compile "org.eclipse.xtext:org.eclipse.xtext.web.servlet:${xtextVersion}"
 	compile "org.eclipse.xtend:org.eclipse.xtend.lib:${xtextVersion}"
-	compile "org.webjars:requirejs:2.1.20"
-	compile "org.webjars:jquery:2.1.4"
-	compile "org.webjars:ace:1.2.0"
-	providedCompile "org.eclipse.jetty:jetty-annotations:9.2.11.v20150529"
-	providedCompile "org.slf4j:slf4j-simple:1.7.12"
+	compile "org.webjars:requirejs:2.3.2"
+	compile "org.webjars:jquery:2.2.4"
+	compile "org.webjars:ace:1.2.3"
+	providedCompile "org.eclipse.jetty:jetty-annotations:9.3.8.v20160314"
+	providedCompile "org.slf4j:slf4j-simple:1.7.21"
 }
 task jettyRun(type:JavaExec) {
 	dependsOn(sourceSets.main.runtimeClasspath)
 	classpath = sourceSets.main.runtimeClasspath.filter{it.exists()}
-	main = 'se.chalmers.web.ServerLauncher'
+	main = 'se.chalmers.turtlebotmission.web.ServerLauncher'
 	standardInput = System.in
 	group = 'run'
 	description = 'Starts an example Jetty server with your language'
