fix build by setting fixed idea plugin version (2.11 not yet available)

--- a/se.chalmers.turtlebotmission.parent/se.chalmers.turtlebotmission.idea/build.gradle
+++ b/se.chalmers.turtlebotmission.parent/se.chalmers.turtlebotmission.idea/build.gradle
@@ -10,10 +10,10 @@ dependencies {
 ideaDevelopment {
 	ideaVersion = '143.381.42'
 	pluginRepositories {
-		url "http://download.eclipse.org/modeling/tmf/xtext/idea/${xtextVersion}/updatePlugins.xml"
+		url "http://download.eclipse.org/modeling/tmf/xtext/idea/${xtextIdeaVersion}/updatePlugins.xml"
 	}
 	pluginDependencies {
-		id 'org.eclipse.xtext.idea' version xtextVersion
+		id 'org.eclipse.xtext.idea' version xtextIdeaVersion
 	}
 }
 
