--- a/se.chalmers.turtlebotmission.parent/build.gradle
+++ b/se.chalmers.turtlebotmission.parent/build.gradle
@@ -10,12 +10,14 @@ buildscript {
 
 subprojects {
 	ext.xtextVersion = '2.11.0'
+	ext.xtextIdeaVersion = '2.9.2'
 	repositories {
 		jcenter()
 	}
 	
 	apply plugin: 'java'
 	apply plugin: 'org.xtext.xtend'
+	apply plugin: 'org.xtext.builder'
 	apply from: "${rootDir}/gradle/source-layout.gradle"
 	apply from: "${rootDir}/gradle/maven-deployment.gradle"
 	apply plugin: 'eclipse'
