--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,15 @@
 machine:
   java:
     version: openjdk8
+  environment:
+    _JAVA_OPTIONS: "-Xms1024m -Xmx2048m"
+    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xms1024m -Xmx2048m"'
 
+#build:
+#  override:
+#    - export TERM="dumb"; ./gradlew build
+#  cache_directories:
+#    - ~/.gradle
+
+general:
+  build_dir: se.chalmers.turtlebotmission.parent
