add circleci test detection

--- a/circle.yml
+++ b/circle.yml
@@ -13,3 +13,8 @@ machine:
 
 general:
   build_dir: se.chalmers.turtlebotmission.parent
+
+test:
+  post:
+    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+    - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
