--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/compiler.xml
 
 ## Gradle
 .gradle
