--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,20 @@
 .project
 
 ## IDEA ignores
-.idea/
-*.iml
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/artifacts
+.idea/**/gradle.xml
+.idea/**/libraries
+.idea/xtextAutoBuilderState.xml
+.idea/dictionaries
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.xml
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
 
 ## Gradle
 .gradle
